[package]
name = "erasure_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
glob = "0.3.1"
ndarray = { version = "0.15.6", features = ["rayon"] }
num-bigint = "0.4.3"
once_cell = "1.18.0"
rayon = "1.7.0"
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
